--- a/index.html
+++ b/index.html
@@ -309,7 +309,8 @@
     <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container">
             <a class="navbar-brand" href="#home">
-                <i class="fas fa-church me-2"></i>CCC Glory of Latter Days Parish
+                <img src="images/homepage/hero/celestial-church-of-christ-logo-png-5.png" alt="CCC Logo" class="navbar-logo">
+                CCC Glory of Latter Days Parish
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -488,7 +489,7 @@
                 <div class="col-md-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <i class="fas fa-sun"></i>
+                            <img src="images/events/programs/Sun.jpeg">
                         </div>
                         <h4>Sunday Morning</h4>
                         <p><strong>10:00 AM</strong></p>
@@ -498,7 +499,7 @@
                 <div class="col-md-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <i class="fas fa-music"></i>
+                            <img src="images/events/programs/Mon.jpeg">
                         </div>
                         <h4>Monday</h4>
                         <p><strong>19:00 - 20:00</strong></p>
@@ -508,7 +509,7 @@
                 <div class="col-md-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <i class="fas fa-music"></i>
+                            <i class="fas fa-prayer"></i>
                         </div>
                         <h4>Wednesday</h4>
                         <p><strong>00:00 - 01:00</strong></p>
@@ -518,7 +519,7 @@
                 <div class="col-md-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <i class="fas fa-moon"></i>
+                            <img src="images/events/programs/Wed.jpeg">
                         </div>
                         <h4>Wednesday Evening</h4>
                         <p><strong>18:00 - 19:00</strong></p>
@@ -528,7 +529,7 @@
                 <div class="col-md-4">
                     <div class="service-card">
                         <div class="service-icon">
-                            <i class="fas fa-music"></i>
+                             <img src="images/events/programs/Fri.jpeg">
                         </div>
                         <h4>Friday Evening</h4>
                         <p><strong>18:00 - 19:00</strong></p>
@@ -662,14 +663,14 @@
                     <!-- Event with Image -->
                     <div class="event-item">
                         <div class="event-media mb-3">
-                            <img class="event-image" src="teens/podcast1_2.jpg" alt="Christmas Carol Service">
+                            <img class="event-image" src="teens/podcast1_2.jpg" alt="Teen podcast">
                         </div>
                         <div class="d-flex justify-content-between align-items-start">
                             <div>
                                 <h5>Teens podcast</h5>
-                                <p><i class="fas fa-calendar me-2"></i>December 15, 2025</p>
-                                <p><i class="fas fa-clock me-2"></i>7:00 PM - 8:30 PM</p>
-                                <p>Rediscovering purpose for a secure future</p>
+                                <p><i class="fas fa-calendar me-2"></i>October 19, 2025</p>
+                                <p><i class="fas fa-clock me-2"></i>13:00 PM - 17:30 PM</p>
+                                <p>Purpose isn't found later - it begins the moment you choose to live intentionally - (https://youtu.be/s9OU9wrmFAo?feature=share1)</p>
                             </div>
                             <span class="badge bg-success">Teens</span>
                         </div>
@@ -693,28 +694,38 @@
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4">
+                    <!-- Event with Image -->
                     <div class="event-item">
+                        <div class="event-media mb-3">
+                            <img class="event-image" src="teens/Tutorial.jpg" alt="Free Maths Tutorial">
+                        </div>
                         <div class="d-flex justify-content-between align-items-start">
                             <div>
-                                <h5>Youth Winter Retreat</h5>
-                                <p><i class="fas fa-calendar me-2"></i>January 10-12, 2026</p>
-                                <p><i class="fas fa-map-marker-alt me-2"></i>Mountain View Camp</p>
-                                <p>A weekend retreat for teens to grow in faith and build lasting friendships.</p>
+                                <h5>Free Math Tutorial</h5>
+                                <p><i class="fas fa-calendar me-2"></i>November 11, 2025</p>
+                                <p><i class="fas fa-clock me-2"></i>14:00</p>
+                                <p><i class="fas fa-house me-2"></i>Join via zoom: https://us05web.zoom.us/j/82503070266?pwd=vgx9VpLlxyskbzaqy3Pkr1gVcq82NV.1)</p>
+                                <p>It's a great chance to strengthen your maths skills, ask questions, and prepare ahead - all for free </p>
                             </div>
-                            <span class="badge bg-warning">Youth</span>
+                            <span class="badge bg-success">Teens</span>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 mb-4">
+            <div class="col-lg-6 mb-4">
+                    <!-- Event with Image -->
                     <div class="event-item">
+                        <div class="event-media mb-3">
+                            <img class="event-image" src="women/women.jpeg" alt="Gathered in Gratitude">
+                        </div>
                         <div class="d-flex justify-content-between align-items-start">
                             <div>
-                                <h5>Marriage Enrichment Workshop</h5>
-                                <p><i class="fas fa-calendar me-2"></i>February 14, 2026</p>
-                                <p><i class="fas fa-clock me-2"></i>9:00 AM - 4:00 PM</p>
-                                <p>Strengthen your marriage with practical tools and biblical principles.</p>
+                                <h5>Gathered in Gratitude</h5>
+                                <p><i class="fas fa-calendar me-2"></i>November 15, 2025</p>
+                                <p><i class="fas fa-clock me-2"></i>12:00 - 16:00</p>
+                                <p><i class="fas fa-church me-2"></i>Church auditorium</p>
+                                <p>Join us for a beautiful afternoon of connection, celebration, and thanksgiving</p>
                             </div>
-                            <span class="badge bg-info">Couples</span>
+                            <span class="badge bg-success">Women</span>
                         </div>
                     </div>
                 </div>
@@ -785,27 +796,24 @@
                     <div class="text-center">
                         <i class="fas fa-map-marker-alt fa-3x mb-3"></i>
                         <h4>Visit Us</h4>
-                        <p>123 Church Street<br>
-                        Faith City, FC 12345<br>
-                        United States</p>
+                        <p>175 F1 High Street<br>
+                        Musselburgh, EH21 7DE<br>
+                        Scotland</p>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="text-center">
                         <i class="fas fa-phone fa-3x mb-3"></i>
                         <h4>Call Us</h4>
-                        <p>Main Office: (555) 123-4567<br>
-                        Prayer Line: (555) 123-PRAY<br>
-                        Emergency: (555) 123-4911</p>
+                        <p>Main Office: (+44)7474361251<br>
+                        Prayer Line: 03330154193</p>
                     </div>
                 </div>
                 <div class="col-lg-4 mb-4">
                     <div class="text-center">
                         <i class="fas fa-envelope fa-3x mb-3"></i>
                         <h4>Email Us</h4>
-                        <p>info@gracecommunity.org<br>
-                        pastor@gracecommunity.org<br>
-                        prayer@gracecommunity.org</p>
+                        <p>info@cccgoldparish.org<p>
                     </div>
                 </div>
             </div>
@@ -845,7 +853,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4">
-                    <h5><i class="fas fa-church me-2"></i>CCC Glory of Latter Days Parish</h5>
+                    <h5><img src="images/homepage/hero/celestial-church-of-christ-logo-png-5.png" alt="CCC Logo" class="navbar-logo">
+                CCC Glory of Latter Days Parish</h5>
                     <p>A place where faith, family, and community come together to worship, grow, and serve.</p>
                     <div class="social-links">
                         <a href="#" class="text-white me-3"><i class="fab fa-facebook fa-2x"></i></a>
