--- a/gallery.html
+++ b/gallery.html
@@ -224,7 +224,7 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="goldparishindex.html">
+            <a class="navbar-brand" href="index.html">
                 <img src="images/logo.jpg" alt="CCC Logo" class="navbar-logo">
                 CCC GOLD PARISH
             </a>
