--- a/events.html
+++ b/events.html
@@ -328,14 +328,14 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="goldparishindex.html">HOME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="goldparishindex.html#about">ABOUT</a></li>
-                    <li class="nav-item"><a class="nav-link" href="goldparishindex.html#services">SUNDAYS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="goldparishsermon.html">SERMONS</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="goldparishevents.html">EVENTS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="goldparishgallery.html">GALLERY</a></li>
-                    <li class="nav-item"><a class="nav-link" href="goldparishindex.html#ministries">MINISTRIES</a></li>
-                    <li class="nav-item"><a class="nav-link" href="goldparishindex.html#contact">CONTACT</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#about">ABOUT</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#services">SUNDAYS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="sermon.html">SERMONS</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="events.html">EVENTS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">GALLERY</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#ministries">MINISTRIES</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index.html#contact">CONTACT</a></li>
                 </ul>
             </div>
         </div>
