--- a/contact.html
+++ b/contact.html
@@ -369,11 +369,11 @@
                     <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#about">ABOUT</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#services">SUNDAYS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="goldparishsermon.html">SERMONS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="goldparishevents.html">EVENTS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="goldparishgallery.html">GALLERY</a></li>
+                    <li class="nav-item"><a class="nav-link" href="sermon.html">SERMONS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="events.html">EVENTS</a></li>
+                    <li class="nav-item"><a class="nav-link" href="gallery.html">GALLERY</a></li>
                     <li class="nav-item"><a class="nav-link" href="index.html#ministries">MINISTRIES</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="goldparishcontact.html">CONTACT</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
         </div>
