--- a/index.html
+++ b/index.html
@@ -869,14 +869,14 @@
                     </div>
                 </div>
                 <div class="col-lg-6 mb-4">
-                    <!-- Christmas event -->
+                    <!-- Beach party event -->
                     <div class="event-item">
                         <div class="event-media mb-3">
                             <img class="event-image" src="images/events/538359275_18016959650767677_2254471270723542986_n.jpg" alt="2025 Beach Party">
                         </div>
                         <div class="d-flex justify-content-between align-items-start">
                             <div>
-                                <h5>Christmas Carol Service</h5>
+                                <h5>Beach party funfair</h5>
                                 <p><i class="fas fa-calendar me-2"></i>August, 2025</p>
                                 <p><i class="fas fa-clock me-2"></i>7:00 PM - 8:30 PM</p>
                                 <p>A beautiful moment for members to socialise and have godly fun together.</p>
